--- a/HTMLPages/TeamPages/team2.html
+++ b/HTMLPages/TeamPages/team2.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
-  <body>
+  <body onload="teamSetup()" >
     <h1>Fixture Generator</h1>
 
     <!-- This is the code to display the navbar that will appear at the top of the pages-->
@@ -33,7 +33,7 @@
 
     <!-- Text for the Title of the Website -->
     <br>
-    <h1>Team 1 Fixtures and Results</h1>
+    <h1>Team 2 Fixtures and Results</h1>
 
     <!-- The code to split the page into columns for which the content to go -->
     <div class="modal-body row">
@@ -43,25 +43,25 @@
             <h2>Home Fixtures</h2>
 
             <!-- Divs to allow space to put the home fixtures into -->
-            <div  class="fixture" id="team2match1"></div>
-            <div  class="fixture" id="team2match2"></div>
-            <div  class="fixture" id="team2match3"></div>
-            <div  class="fixture" id="team2match4"></div>
-            <div  class="fixture" id="team2match5"></div>
-            <div  class="fixture" id="team2match6"></div>
-            <div  class="fixture" id="team2match7"></div>
-            <div  class="fixture" id="team2match8"></div>
-            <div  class="fixture" id="team2match9"></div>
-            <div  class="fixture" id="team2match10"></div>
-            <div  class="fixture" id="team2match11"></div>
-            <div  class="fixture" id="team2match12"></div>
-            <div  class="fixture" id="team2match13"></div>
-            <div  class="fixture" id="team2match14"></div>
-            <div  class="fixture" id="team2match15"></div>
-            <div  class="fixture" id="team2match16"></div>
-            <div  class="fixture" id="team2match17"></div>
-            <div  class="fixture" id="team2match18"></div>
-            <div  class="fixture" id="team2match19"></div>
+            <div  class="fixture" id="homematch1"></div>
+            <div  class="fixture" id="homematch2"></div>
+            <div  class="fixture" id="homematch3"></div>
+            <div  class="fixture" id="homematch4"></div>
+            <div  class="fixture" id="homematch5"></div>
+            <div  class="fixture" id="homematch6"></div>
+            <div  class="fixture" id="homematch7"></div>
+            <div  class="fixture" id="homematch8"></div>
+            <div  class="fixture" id="homematch9"></div>
+            <div  class="fixture" id="homematch10"></div>
+            <div  class="fixture" id="homematch11"></div>
+            <div  class="fixture" id="homematch12"></div>
+            <div  class="fixture" id="homematch13"></div>
+            <div  class="fixture" id="homematch14"></div>
+            <div  class="fixture" id="homematch15"></div>
+            <div  class="fixture" id="homematch16"></div>
+            <div  class="fixture" id="homematch17"></div>
+            <div  class="fixture" id="homematch18"></div>
+            <div  class="fixture" id="homematch19"></div>
 
        </div>
         <div class="col-md-6">
@@ -70,25 +70,25 @@
             <h2>Away Fixtures</h2>
 
             <!-- Divs to allow space to put the home fixtures into -->
-            <div  class="fixture" id="team2match20"></div>
-            <div  class="fixture" id="team2match21"></div>
-            <div  class="fixture" id="team2match22"></div>
-            <div  class="fixture" id="team2match23"></div>
-            <div  class="fixture" id="team2match24"></div>
-            <div  class="fixture" id="team2match25"></div>
-            <div  class="fixture" id="team2match26"></div>
-            <div  class="fixture" id="team2match27"></div>
-            <div  class="fixture" id="team2match28"></div>
-            <div  class="fixture" id="team2match29"></div>
-            <div  class="fixture" id="team2match30"></div>
-            <div  class="fixture" id="team2match31"></div>
-            <div  class="fixture" id="team2match32"></div>
-            <div  class="fixture" id="team2match33"></div>
-            <div  class="fixture" id="team2match34"></div>
-            <div  class="fixture" id="team2match35"></div>
-            <div  class="fixture" id="team2match36"></div>
-            <div  class="fixture" id="team2match37"></div>
-            <div  class="fixture" id="team2match38"></div>
+            <div  class="fixture" id="awaymatch20"></div>
+            <div  class="fixture" id="awaymatch21"></div>
+            <div  class="fixture" id="awaymatch22"></div>
+            <div  class="fixture" id="awaymatch23"></div>
+            <div  class="fixture" id="awaymatch24"></div>
+            <div  class="fixture" id="awaymatch25"></div>
+            <div  class="fixture" id="awaymatch26"></div>
+            <div  class="fixture" id="awaymatch27"></div>
+            <div  class="fixture" id="awaymatch28"></div>
+            <div  class="fixture" id="awaymatch29"></div>
+            <div  class="fixture" id="awaymatch30"></div>
+            <div  class="fixture" id="awaymatch31"></div>
+            <div  class="fixture" id="awaymatch32"></div>
+            <div  class="fixture" id="awaymatch33"></div>
+            <div  class="fixture" id="awaymatch34"></div>
+            <div  class="fixture" id="awaymatch35"></div>
+            <div  class="fixture" id="awaymatch36"></div>
+            <div  class="fixture" id="awaymatch37"></div>
+            <div  class="fixture" id="awaymatch38"></div>
 
         </div>
     </div>
