--- a/HTMLPages/Knockoutfinal.html
+++ b/HTMLPages/Knockoutfinal.html
@@ -28,7 +28,7 @@
                     <a class="nav-item nav-link active"  href="/HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
                     <a class="nav-item nav-link active" href="/HTMLPages/teamInput.html">Team Input</a>
                     <a class="nav-item nav-link active" href="/HTMLPages/checkWebsite.html">League Table and Fixtures</a>
-                    <a class="nav-item nav-link active" href="x">Results Input Page</a>
+                    <a class="nav-item nav-link active" href="/HTMLPages/resultInput.html">Results Input Page</a>
                 </div>
             </div>
       </nav>
