--- a/HTMLPages/TeamPages/team3.html
+++ b/HTMLPages/TeamPages/team3.html
@@ -26,7 +26,7 @@
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
           <a class="nav-item nav-link active " href="/HTMLPages/teamInput.html">Team Input</a>
           <a class="nav-item nav-link active " href="/HTMLPages/checkWebsite.html">League Table and Fixtures</a>
-          <a class="nav-item nav-link active " href="x">Results Input Page</a>
+          <a class="nav-item nav-link active " href="/HTMLPages/resultInput.html">Results Input Page</a>
         </div>
       </div>
     </nav>
