--- a/HTMLPages/Knockoutfinal.html
+++ b/HTMLPages/Knockoutfinal.html
@@ -117,6 +117,8 @@
     <script src="/JavascriptFiles/script2.js"></script>
     <script src="/JavascriptFiles/teamArray.js"></script>
     <script src="/JavascriptFiles/script3.js"></script>
+    <script src="/JavascriptFiles/knockoutTeam.js"></script>
+    <script src="/JavascriptFiles/roundTeam.js"></script>
 
     </div>
   </body>
