--- a/HTMLPages/LeagueTable.html
+++ b/HTMLPages/LeagueTable.html
@@ -360,6 +360,8 @@
     <script src="/JavascriptFiles/teamArray.js"></script>
     <script src="/JavascriptFiles/script3.js"></script>
     <script src="/JavascriptFiles/script.js"></script>
+    <script src="/JavascriptFiles/knockoutTeam.js"></script>
+    <script src="/JavascriptFiles/roundTeam.js"></script>
 
     </div>
   </body>
