--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -60,5 +60,7 @@
     <script src="/JavascriptFiles/script3.js"></script>
     <script src="/JavascriptFiles/script4.js"></script>
     <script src="/JavascriptFiles/teamArray.js"></script>
+    <script src="/JavascriptFiles/knockoutTeam.js"></script>
+    <script src="/JavascriptFiles/roundTeam.js"></script>
   </body>
 </html>
