--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -74,5 +74,7 @@
     <script src="/JavascriptFiles/script.js"></script>
     <script src="/JavascriptFiles/script2.js"></script>
     <script src="/JavascriptFiles/teamArray.js"></script>
+    <script src="/JavascriptFiles/knockoutTeam.js"></script>
+    <script src="/JavascriptFiles/roundTeam.js"></script>
   </body>
 </html>
