--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -43,7 +43,7 @@
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
     <form onSubmit="return formSubmit1()">
-            <input id="teamNmb" type="text" placeholder="Enter amount of teams...">
+            <input id="teamNmb" type="number" placeholder="Enter amount of teams...">
             <select id = "type" name = "type">
                 <option value="roundRobin">Round Robin</option>
                 <option value="knockout">Knockout</option>
