--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -42,12 +42,202 @@
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
     <form onSubmit="return formSubmit3()">
-            <input id="fixture" type="text" placeholder="Enter amount of teams...">
-            <select id = "type" name = "type">
-                <option value="roundRobin">Round Robin</option>
-                <option value="knockout">Knockout</option>
-            </select>
-            <div></div>
+            <select id="fixtureSelected">
+              <option id="fixture1"></option>
+              <option id="fixture2"></option>
+              <option id="fixture3"></option>
+              <option id="fixture4"></option>
+              <option id="fixture5"></option>
+              <option id="fixture6"></option>
+              <option id="fixture7"></option>
+              <option id="fixture8"></option>
+              <option id="fixture9"></option>
+              <option id="fixture10"></option>
+              <option id="fixture11"></option>
+              <option id="fixture12"></option>
+              <option id="fixture13"></option>
+              <option id="fixture14"></option>
+              <option id="fixture15"></option>
+              <option id="fixture16"></option>
+              <option id="fixture17"></option>
+              <option id="fixture18"></option>
+              <option id="fixture19"></option>
+              <option id="fixture20"></option>
+              <option id="fixture21"></option>
+              <option id="fixture22"></option>
+              <option id="fixture23"></option>
+              <option id="fixture24"></option>
+              <option id="fixture25"></option>
+              <option id="fixture26"></option>
+              <option id="fixture27"></option>
+              <option id="fixture28"></option>
+              <option id="fixture29"></option>
+              <option id="fixture30"></option>
+              <option id="fixture31"></option>
+              <option id="fixture32"></option>
+              <option id="fixture33"></option>
+              <option id="fixture34"></option>
+              <option id="fixture35"></option>
+              <option id="fixture36"></option>
+              <option id="fixture37"></option>
+              <option id="fixture38"></option>
+              <option id="fixture39"></option>
+              <option id="fixture40"></option>
+              <option id="fixture41"></option>
+              <option id="fixture42"></option>
+              <option id="fixture43"></option>
+              <option id="fixture44"></option>
+              <option id="fixture45"></option>
+              <option id="fixture46"></option>
+              <option id="fixture47"></option>
+              <option id="fixture48"></option>
+              <option id="fixture49"></option>
+              <option id="fixture50"></option>
+              <option id="fixture51"></option>
+              <option id="fixture52"></option>
+              <option id="fixture53"></option>
+              <option id="fixture54"></option>
+              <option id="fixture55"></option>
+              <option id="fixture56"></option>
+              <option id="fixture57"></option>
+              <option id="fixture58"></option>
+              <option id="fixture59"></option>
+              <option id="fixture60"></option>
+              <option id="fixture61"></option>
+              <option id="fixture62"></option>
+              <option id="fixture63"></option>
+              <option id="fixture64"></option>
+              <option id="fixture65"></option>
+              <option id="fixture66"></option>
+              <option id="fixture67"></option>
+              <option id="fixture68"></option>
+              <option id="fixture69"></option>
+              <option id="fixture70"></option>
+              <option id="fixture71"></option>
+              <option id="fixture72"></option>
+              <option id="fixture73"></option>
+              <option id="fixture74"></option>
+              <option id="fixture75"></option>
+              <option id="fixture76"></option>
+              <option id="fixture77"></option>
+              <option id="fixture78"></option>
+              <option id="fixture79"></option>
+              <option id="fixture80"></option>
+              <option id="fixture81"></option>
+              <option id="fixture82"></option>
+              <option id="fixture83"></option>
+              <option id="fixture84"></option>
+              <option id="fixture85"></option>
+              <option id="fixture86"></option>
+              <option id="fixture87"></option>
+              <option id="fixture88"></option>
+              <option id="fixture89"></option>
+              <option id="fixture90"></option>
+              <option id="fixture91"></option>
+              <option id="fixture92"></option>
+              <option id="fixture93"></option>
+              <option id="fixture94"></option>
+              <option id="fixture95"></option>
+              <option id="fixture96"></option>
+              <option id="fixture97"></option>
+              <option id="fixture98"></option>
+              <option id="fixture99"></option>
+              <option id="fixture100"></option>
+              <option id="fixture101"></option>
+              <option id="fixture102"></option>
+              <option id="fixture103"></option>
+              <option id="fixture104"></option>
+              <option id="fixture105"></option>
+              <option id="fixture106"></option>
+              <option id="fixture107"></option>
+              <option id="fixture108"></option>
+              <option id="fixture109"></option>
+              <option id="fixture110"></option>
+              <option id="fixture111"></option>
+              <option id="fixture112"></option>
+              <option id="fixture113"></option>
+              <option id="fixture114"></option>
+              <option id="fixture115"></option>
+              <option id="fixture116"></option>
+              <option id="fixture117"></option>
+              <option id="fixture118"></option>
+              <option id="fixture119"></option>
+              <option id="fixture120"></option>
+              <option id="fixture121"></option>
+              <option id="fixture122"></option>
+              <option id="fixture123"></option>
+              <option id="fixture124"></option>
+              <option id="fixture125"></option>
+              <option id="fixture126"></option>
+              <option id="fixture127"></option>
+              <option id="fixture128"></option>
+              <option id="fixture129"></option>
+              <option id="fixture130"></option>
+              <option id="fixture131"></option>
+              <option id="fixture132"></option>
+              <option id="fixture133"></option>
+              <option id="fixture134"></option>
+              <option id="fixture135"></option>
+              <option id="fixture136"></option>
+              <option id="fixture137"></option>
+              <option id="fixture138"></option>
+              <option id="fixture139"></option>
+              <option id="fixture140"></option>
+              <option id="fixture141"></option>
+              <option id="fixture142"></option>
+              <option id="fixture143"></option>
+              <option id="fixture144"></option>
+              <option id="fixture145"></option>
+              <option id="fixture146"></option>
+              <option id="fixture147"></option>
+              <option id="fixture148"></option>
+              <option id="fixture149"></option>
+              <option id="fixture150"></option>
+              <option id="fixture151"></option>
+              <option id="fixture152"></option>
+              <option id="fixture153"></option>
+              <option id="fixture154"></option>
+              <option id="fixture155"></option>
+              <option id="fixture156"></option>
+              <option id="fixture157"></option>
+              <option id="fixture158"></option>
+              <option id="fixture159"></option>
+              <option id="fixture160"></option>
+              <option id="fixture161"></option>
+              <option id="fixture162"></option>
+              <option id="fixture163"></option>
+              <option id="fixture164"></option>
+              <option id="fixture165"></option>
+              <option id="fixture166"></option>
+              <option id="fixture167"></option>
+              <option id="fixture168"></option>
+              <option id="fixture169"></option>
+              <option id="fixture170"></option>
+              <option id="fixture171"></option>
+              <option id="fixture172"></option>
+              <option id="fixture173"></option>
+              <option id="fixture174"></option>
+              <option id="fixture175"></option>
+              <option id="fixture176"></option>
+              <option id="fixture177"></option>
+              <option id="fixture178"></option>
+              <option id="fixture179"></option>
+              <option id="fixture180"></option>
+              <option id="fixture181"></option>
+              <option id="fixture182"></option>
+              <option id="fixture183"></option>
+              <option id="fixture184"></option>
+              <option id="fixture185"></option>
+              <option id="fixture186"></option>
+              <option id="fixture187"></option>
+              <option id="fixture188"></option>
+              <option id="fixture189"></option>
+              <option id="fixture190"></option>
+          </select id = "type" name = "type">
+            <div class="gap" ></div>
+            <input id="homeGoals" type="number" placeholder="Number of Home Goals...">
+            <input id="awayGoals" type="number" placeholder="Number of Away Goals...">
+            <div class="gap" ></div>
             <input type="submit"> 
     </form>
 
