Continued until error

--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
-  <body>
+  <body onload="form3Setup()">
     <h1>Fixture Generator</h1>
 
     <!-- This is the code to display the navbar that will appear at the top of the pages-->
